--- a/html/cardexZS.html
+++ b/html/cardexZS.html
@@ -554,7 +554,13 @@
                             <h4>Detalles</h4>
                             <input id="productos-InputDetalles" class="w3-input w3-border w3-round-medium" type="text" name="detalles_productos" placeholder="Información adicional">
                             <h4>Tipo de Moneda</h4>
-                            <input id="productos-InputMoneda" class="w3-input w3-border w3-round-medium" type="text" name="moneda_productos" placeholder="Soles, Dolares, Euros">
+                            <select id="productos-InputMoneda" class="w3-select w3-round-medium" name="moneda_productos">
+                                <option value="" selected disabled>Seleccionar</option>
+                                <option value="PEN" >PEN</option>
+                                <option value="USD" >USD</option>
+                                <option value="EUR" >EUR</option>
+                                <option value="JPN" >JPN</option>
+                            </select>
                             <h4>Precio de Compra / <span>Costo de Fabricación</span></h4>
                             <input id="productos-InputCompra" class="meraki-font-s5 w3-input w3-border w3-round-medium" type="text" name="compra_productos">
                             <h4>Precio de Venta</h4>
@@ -636,31 +642,33 @@
                             <div class="w3-row w3-margin-top">
                                 <div class="w3-col m5 l5">
                                     <h4>ID Producto</h4>
-                                    <input id="reg-documentos-InputID" class="w3-input w3-border" type="text" name="ID_regdocumentos" placeholder="ID" disabled>
-                                    <input id="regdocumentos-InputID_form" class="w3-input w3-border" type="text" name="ID_regdocumentos_form" placeholder="ID" style="display:none;">
+                                    <input id="reg-documentos-InputID" class="w3-input w3-border w3-round-medium" type="text" name="ID_regdocumentos" placeholder="ID" disabled>
+                                    <input id="regdocumentos-InputID_form" class="w3-input w3-border w3-round-medium" type="text" name="ID_regdocumentos_form" placeholder="ID" style="display:none;">
                                 </div>
                                 <div class="w3-col m1 l1">
                                     <p></p>
                                 </div>
                                 <div class="w3-col m6 l6">
                                     <h4>Fecha</h4>
-                                    <input id="regdocumentos-InputFecha" class="w3-input w3-border" type="date" name="fecha_regdocumentos" ng-model="fecha" placeholder="Nombres" required>
+                                    <input id="regdocumentos-InputFecha" class="w3-input w3-border w3-round-medium" type="date" name="fecha_regdocumentos" ng-model="fecha" placeholder="Nombres" required>
                                 </div>
                             </div>
                             <hr>
 
-                            <div class="w3-row">
-                                <h4>Detalle</h4>
-                            </div>
-                            <input id="regdocumentos-InputDetalle" class="w3-input w3-border" type="text" name="detalle_regdocumentos" ng-model="detalle" placeholder="..." required>
+
+                            <h4>Detalle</h4>
+                            <input id="regdocumentos-InputDetalle" class="w3-input w3-border w3-round-medium" type="text" name="detalle_regdocumentos" ng-model="detalle" placeholder="Descripción del movimiento">
 
                             <hr>
                             <div class="w3-row">
                                 <div class="w3-col m2 l2">
                                     <h4>Documento</h4>
                                 </div>
-                                <div class="w3-col m6 l6">
-                                    <select id="regdocumentos-InputDocumento" class="w3-select" name="documento_regdocumentos" title="Lista de Documentos" ng-model="regdocumentos_documento" ng-init="regdocumentos_documento = ''"
+                                <div class="w3-col m1 l1">
+                                    <p></p>
+                                </div>
+                                <div class="w3-col m5 l5">
+                                    <select id="regdocumentos-InputDocumento" class="w3-select w3-round-medium" name="documento_regdocumentos" title="Lista de Documentos" ng-model="regdocumentos_documento" ng-init="regdocumentos_documento = ''"
                                     ng-mouseleave="setDocTipo()">
                                       <option value="" disabled selected>Seleccione</option>
                                       <option ng-repeat = "doc in data_documentos" value="{{doc.Nombre}}">{{doc.Nombre}}</option>
@@ -670,10 +678,10 @@
                                     <p></p>
                                 </div>
                                 <div class="w3-col m3 l3">
-                                    <input class="w3-input w3-border" type="text" name="docnum_regdocumentos" ng-model="docNum" placeholder="N°" value="">
+                                    <input class="w3-input w3-border w3-round-medium" type="text" name="docnum_regdocumentos" ng-model="docNum" placeholder="N° Documento" value="">
                                 </div>
                             </div>
-                            <div class="w3-row">
+                            <div class="w3-row" style="display: none;">
 
                                 <div class="w3-col m4 l4" ng-repeat="doc in data_documentos | filter:regdocumentos_documento">
                                     <input id="regdocumentos-InputDocTipo" class="w3-input w3-center w3-rightbar w3-leftbar" type="text" placeholder="Tipo = {{ doc.Tipo}}" value="{{ doc.Tipo}}" ng-if="regdocumentos_documento !== ''" disabled>
@@ -686,13 +694,24 @@
                                 </div>
 
                             </div>
+                            <div class="w3-row">
+                                <div class="w3-col m9 l9">
+                                    <p></p>
+                                </div>
+                                <div class="w3-col m3 l3">
+                                    <input class="w3-input w3-border w3-round-medium" type="text" name="guia_regdocumentos" ng-model="guia" placeholder="N° Guía" value="">
+                                </div>
+                            </div>
                             <hr>
                             <div class="w3-row">
                                 <div class="w3-col m2 l2">
                                     <h4>Tercero</h4>
                                 </div>
-                                <div class="w3-col m6 l6">
-                                    <select id="regdocumentos-InputTercero" class="w3-select" name="tercero_regdocumentos" title="Lista de Terceros" ng-model="regdocumentos_tercero" ng-init="regdocumentos_tercero = ''">
+                                <div class="w3-col m1 l1">
+                                    <p></p>
+                                </div>
+                                <div class="w3-col m5 l5">
+                                    <select id="regdocumentos-InputTercero" class="w3-select w3-round-medium" name="tercero_regdocumentos" title="Aquí se mostraran los terceros correspondientes al tipo de documentos seleccionado" ng-model="regdocumentos_tercero" ng-init="regdocumentos_tercero = ''">
                                         <option value="" disabled selected>Seleccione</option>
                                         <option ng-repeat = "ter in data_terceros" value="{{ter.Nombre}}" ng-if="ter.TerceroClass == (docTipo | uppercase)">{{ter.Nombre}}</option>
                                     </select>
@@ -700,9 +719,11 @@
                                 <div class="w3-col m1 l1">
                                     <p></p>
                                 </div>
-                                <div class="w3-col m3 l3"><p></p></div>
+                                <div class="w3-col m3 l3">
+                                    <p></p>
+                                </div>
                             </div>
-                            <div class="w3-row">
+                            <div class="w3-row" style="display: none;">
                                 <div class="w3-col m4 l4" ng-repeat="ter in data_terceros | filter:regdocumentos_tercero">
                                     <input class="w3-input w3-center w3-rightbar w3-leftbar" type="text" placeholder="Tipo = {{ter.TerceroClass}}" ng-if="regdocumentos_tercero !== ''" disabled>
                                 </div>
@@ -719,18 +740,21 @@
                                 <div class="w3-col m2 l2">
                                     <h4>Producto</h4>
                                 </div>
-                                <div class="w3-col m6 l6">
-                                    <h4 class="w3-green w3-border w3-border-black w3-round-large w3-center">{{product}}</h4>
+                                <div class="w3-col m1 l1">
+                                    <p></p>
+                                </div>
+                                <div class="w3-col m5 l5">
+                                    <h4 class="w3-brown w3-border w3-border-black w3-round-large w3-center">{{product}}</h4>
                                 </div>
                                 <div class="w3-col m1 l1">
                                     <p></p>
                                 </div>
                                 <div class="w3-col m3 l3">
-                                    <input class="w3-input w3-border" type="text" placeholder="ID = {{productId}}" disabled>
+                                    <input class="w3-input w3-border w3-round-medium" type="text" placeholder="ID = {{productId}}" disabled>
                                 </div>
                             </div>
                             <hr class="w3-border w3-border-red">
-                            <input class="meraki-search w3-input w3-animate-input w3-light-grey w3-round-medium w3-margin-top" type="text"  ng-model="regdocumentos_prod_filter" style="width:50%">
+                            <input class="meraki-search w3-input w3-animate-input w3-light-grey w3-round-medium w3-margin-top" type="text"  ng-model="regdocumentos_prod_filter" placeholder="filtrar productos" style="width:50%">
                         </div>
                     </div>
                     <div class="w3-col s0 m2 l2">
@@ -809,7 +833,7 @@
                 <!--SEGUNDA TABLA-->
                 <div class="w3-container w3-margin-top w3-margin-bottom w3-responsive">
 
-                    <h4>Resumen</h4>
+                    <h4>Resumen de {{priceText}}</h4>
                     <table class="w3-table-all w3-card-4 w3-text-dark-grey">
                         <tr>
                             <th>ID</th>
@@ -1302,7 +1326,7 @@
             $scope.fecha = '';
             $scope.detalle = '';
             $scope.moneda = '';
-            $scope.product = '';
+            $scope.product = 'Seleccione un producto';
             $scope.productId = '';
             $scope.stock = '';
             $scope.temp_stock = [];
