--- a/html/cardexZS.html
+++ b/html/cardexZS.html
@@ -669,7 +669,8 @@
                                 </div>
                                 <div class="w3-col m5 l5">
                                     <select id="regdocumentos-InputDocumento" class="w3-select w3-round-medium" name="documento_regdocumentos" title="Lista de Documentos" ng-model="regdocumentos_documento" ng-init="regdocumentos_documento = ''"
-                                    ng-mouseleave="setDocTipo()">
+                                    ng-mouseleave="setDocTipo()"
+                                    ng-mousedown="updateDocumentosTable()">
                                       <option value="" disabled selected>Seleccione</option>
                                       <option ng-repeat = "doc in data_documentos" value="{{doc.Nombre}}">{{doc.Nombre}}</option>
                                   </select>
@@ -711,7 +712,8 @@
                                     <p></p>
                                 </div>
                                 <div class="w3-col m5 l5">
-                                    <select id="regdocumentos-InputTercero" class="w3-select w3-round-medium" name="tercero_regdocumentos" title="Aquí se mostraran los terceros correspondientes al tipo de documentos seleccionado" ng-model="regdocumentos_tercero" ng-init="regdocumentos_tercero = ''">
+                                    <select id="regdocumentos-InputTercero" class="w3-select w3-round-medium" name="tercero_regdocumentos" title="Aquí se mostraran los terceros correspondientes al tipo de documentos seleccionado" ng-model="regdocumentos_tercero" ng-init="regdocumentos_tercero = ''"
+                                    ng-mousedown="updateTercerosTable()">
                                         <option value="" disabled selected>Seleccione</option>
                                         <option ng-repeat = "ter in data_terceros" value="{{ter.Nombre}}" ng-if="ter.TerceroClass == (docTipo | uppercase)">{{ter.Nombre}}</option>
                                     </select>
@@ -794,20 +796,20 @@
                     </div>
                     <div class="w3-col s0 m8 l8">
                         <div class="w3-row-padding w3-center">
-                            <div class="w3-col m3 l3">
-                                <h4 class="w3-border-bottom w3-border-green">CANTIDAD</h4>
+                            <div class="w3-col m6 l3">
+                                <h4 class="meraki-font-s6 meraki-border-bottom">CANTIDAD</h4>
                             </div>
-                            <div class="w3-col m2 l2">
-                                <input id="regdocumentos-InputCantidad"class="w3-input w3-border w3-xlarge w3-text-bold" ng-model="cantidad" type="number">
+                            <div class="w3-col m6 l2">
+                                <input id="regdocumentos-InputCantidad"class="w3-input w3-xlarge w3-text-bold w3-round-medium" ng-model="cantidad" type="number">
                             </div>
-                            <div class="w3-col m1 l1">
+                            <div class="w3-col m0 l1">
                                 <p></p>
                             </div>
-                            <div class="w3-col m3 l3">
-                                <h4 class="w3-border-bottom w3-border-green">PRECIO DE {{priceText}}</h4>
+                            <div class="w3-col m6 l3">
+                                <h4 class="meraki-font-s6 meraki-border-bottom">PRECIO DE {{priceText}}</h4>
                             </div>
-                            <div class="w3-col m3 l3">
-                                <input class="w3-input w3-ana-508 w3-xlarge w3-text-bold" type="text" name="" value="{{price + ' ' + moneda}}" disabled>
+                            <div class="w3-col m6 l3">
+                                <input class="w3-input w3-ana-508 w3-xlarge w3-text-bold w3-round-medium" type="text" name="" value="{{price + ' ' + moneda}}" disabled>
                             </div>
                         </div>
 
@@ -816,10 +818,10 @@
                                 <p></p>
                             </div>
                             <div class="w3-col m3 l3">
-                                <button class="w3-btn w3-block w3-black" type="button" name="button" ng-click="collectData()" >Agregar</button>
+                                <button class="w3-btn w3-block w3-ana-502 meraki-border-bottom w3-round-medium" type="button" name="button" ng-click="collectData()" >Agregar</button>
                             </div>
                             <div class="w3-col m3 l3">
-                                <button class="w3-btn w3-block w3-black" type="button" name="button" ng-click="deleteLast()">Borrar</button>
+                                <button class="w3-btn w3-block w3-ana-502 meraki-border-bottom w3-round-medium" type="button" name="button" ng-click="deleteLast()">Borrar</button>
                             </div>
                         </div>
                         <hr class="w3-border w3-border-red">
@@ -839,18 +841,19 @@
                             <th>ID</th>
                             <th>Fecha</th>
                             <th>Doc.</th>
-                            <th>Doc.Num.</th>
+                            <th>N.Doc</th>
+                            <th>N.Guía</th>
                             <th>Tercero</th>
                             <th>Detalle</th>
                             <th>ID Prod.</th>
                             <th>Prod.</th>
                             <th>Moneda</th>
-                            <th>(S)Cantidad</th>
-                            <th>(S)P.Unitario</th>
-                            <th>(S)Total</th>
                             <th>(E)Cantidad</th>
                             <th>(E)P.Unitario</th>
                             <th>(E)Total</th>
+                            <th>(S)Cantidad</th>
+                            <th>(S)P.Unitario</th>
+                            <th>(S)Total</th>
                             <th>Stock</th>
                         </tr>
                         <tr class="w3-hover-blue-gray" ng-repeat="x in DataCollected | filter:regdocumentos_resumen_filter">
@@ -858,25 +861,26 @@
                             <td>{{ x.Fecha }}</td>
                             <td>{{ x.Doc }}</td>
                             <td>{{ x.Docnum }}</td>
+                            <td>{{ x.Guianum }}</td>
                             <td>{{ x.Tercero }}</td>
                             <td>{{ x.Detalle }}</td>
                             <td>{{ x.IDProd }}</td>
                             <td>{{ x.Prod }}</td>
                             <td>{{ x.Moneda}}</td>
-                            <td>{{ x.SCantidad }}</td>
-                            <td>{{ x.SPUnitario }}</td>
-                            <td>{{ x.STotal }}</td>
                             <td>{{ x.ECantidad }}</td>
                             <td>{{ x.EPUnitario }}</td>
                             <td>{{ x.ETotal }}</td>
+                            <td>{{ x.SCantidad }}</td>
+                            <td>{{ x.SPUnitario }}</td>
+                            <td>{{ x.STotal }}</td>
                             <td>{{ DataCollected[$index].Stock }}</td>
                         </tr>
                     </table>
                 </div>
 
-                <div class="w3-row">
+                <div class="w3-row w3-margin-top">
                     <div class="w3-col s0 m2 l2">
-
+                        <p></p>
                     </div>
                     <div class="w3-col s0 m8 l8">
                         <div class="w3-row-padding w3-center w3-margin-top">
@@ -884,17 +888,19 @@
                                 <p></p>
                             </div>
                             <div class="w3-col m3 l3">
-                                <button class="w3-btn w3-block w3-black" type="button" name="button" ng-click="deleteAll()">Limpiar</button>
+                                <button class="w3-btn w3-block w3-ana-502 meraki-border-bottom w3-round-medium" type="button" name="button" ng-click="deleteAll()">Limpiar</button>
                             </div>
                             <div class="w3-col m3 l3">
-                                <button class="w3-btn w3-block w3-black" type="button" name="button" ng-click="save()" ng-mouseleave="updateProductosTable()">Registrar</button>
+                                <button class="w3-btn w3-block w3-ana-502 meraki-border-bottom w3-round-medium" type="button" name="button" ng-click="save()" ng-mouseleave="updateProductosTable()">Registrar</button>
                             </div>
                         </div>
                     </div>
                     <div class="w3-col s0 m2 l2">
-
+                        <p></p>
                     </div>
                 </div>
+
+
 
                 <div style="height:50vh;">
                     <p></p>
@@ -1199,12 +1205,12 @@
         });
         app.controller('ZSCtrl', function($scope, $http) {
             $scope.data_zonasSucursales = [];
-            $http.get("http://localhost/meraki-rent/ms-invent/php/ZS_mysql.php").then(function(response) {
+            $http.get("../php/ZS_mysql.php").then(function(response) {
                 $scope.data_zonasSucursales = response.data.records;
             });
 
             $scope.updateZSTable = function() {
-                $http.get("http://localhost/meraki-rent/ms-invent/php/ZS_mysql.php").then(function(response) {
+                $http.get("../php/ZS_mysql.php").then(function(response) {
                     $scope.data_zonasSucursales = response.data.records;
                 });
             }
@@ -1219,12 +1225,12 @@
         });
         app.controller('grupos-Ctrl', function($scope, $http, $window) {
             $scope.data_grupos = [];
-            $http.get("http://localhost/meraki-rent/ms-invent/php/grupos_mysql.php").then(function(response) {
+            $http.get("../php/grupos_mysql.php").then(function(response) {
                 $scope.data_grupos = response.data.records;
             });
 
             $scope.updateGruposTable = function() {
-                $http.get("http://localhost/meraki-rent/ms-invent/php/grupos_mysql.php").then(function(response) {
+                $http.get("../php/grupos_mysql.php").then(function(response) {
                     $scope.data_grupos = response.data.records;
                 });
             }
@@ -1239,12 +1245,12 @@
         });
         app.controller('documentos-Ctrl', function($scope, $http, $window) {
             $scope.data_documentos = [];
-            $http.get("http://localhost/meraki-rent/ms-invent/php/documentos_mysql.php").then(function(response) {
+            $http.get("../php/documentos_mysql.php").then(function(response) {
                 $scope.data_documentos = response.data.records;
             });
 
             $scope.updateDocumentosTable = function() {
-                $http.get("http://localhost/meraki-rent/ms-invent/php/documentos_mysql.php").then(function(response) {
+                $http.get("../php/documentos_mysql.php").then(function(response) {
                     $scope.data_documentos = response.data.records;
                 });
             }
@@ -1259,12 +1265,12 @@
         });
         app.controller('terceros-Ctrl', function($scope, $http, $window) {
             $scope.data_terceros = [];
-            $http.get("http://localhost/meraki-rent/ms-invent/php/terceros_mysql.php").then(function(response) {
+            $http.get("../php/terceros_mysql.php").then(function(response) {
                 $scope.data_terceros = response.data.records;
             });
 
             $scope.updateTercerosTable = function() {
-                $http.get("http://localhost/meraki-rent/ms-invent/php/terceros_mysql.php").then(function(response) {
+                $http.get("../php/terceros_mysql.php").then(function(response) {
                     $scope.data_terceros = response.data.records;
                 });
             }
@@ -1284,13 +1290,13 @@
             $scope.stocke = 0;
             $scope.stocka_offset = 100;
 
-            $http.get("http://localhost/meraki-rent/ms-invent/php/productos_mysql.php").then(function(response) {
+            $http.get("../php/productos_mysql.php").then(function(response) {
                 $scope.data_productos = response.data.records;
 
             });
 
             $scope.updateProductosTable = function() {
-                $http.get("http://localhost/meraki-rent/ms-invent/php/productos_mysql.php").then(function(response) {
+                $http.get("../php/productos_mysql.php").then(function(response) {
                     $scope.data_productos = response.data.records;
 
                 });
@@ -1330,6 +1336,7 @@
             $scope.productId = '';
             $scope.stock = '';
             $scope.temp_stock = [];
+            $scope.guia = '';
             $scope.docNum = '';
             $scope.docNat = '';
             $scope.docTipo = '';
@@ -1428,6 +1435,13 @@
 
                 if ($scope.docNum === '') {
                     collect = confirm('Continuar sin número de documento ?');
+                    if (!collect) {
+                        return;
+                    }
+                }
+
+                if ($scope.guia === '') {
+                    collect = confirm('Continuar sin número de guía ?');
                     if (!collect) {
                         return;
                     }
@@ -1574,12 +1588,12 @@
             $scope.editEnable = true;
             $scope.indexToSave = 0;
 
-            $http.get("http://localhost/meraki-rent/ms-invent/php/editdocumentos_mysql.php").then(function(response) {
+            $http.get("../php/editdocumentos_mysql.php").then(function(response) {
                 $scope.data_editdocumentos = response.data.records;
             });
 
             $scope.updateEditdocumentosTable = function() {
-                $http.get("http://localhost/meraki-rent/ms-invent/php/editdocumentos_mysql.php").then(function(response) {
+                $http.get("../php/editdocumentos_mysql.php").then(function(response) {
                     $scope.data_editdocumentos = response.data.records;
                 });
             }
@@ -1634,7 +1648,7 @@
 
             $scope.generateQuery = function(){
 
-                $http.get("http://localhost/meraki-rent/ms-invent/php/editdocumentos_mysql.php").then(function(response) {
+                $http.get("../php/editdocumentos_mysql.php").then(function(response) {
                     $scope.data_consultas = response.data.records;
 
                     var temp_data_consultas = [];
@@ -1791,10 +1805,10 @@
 
             if (btn == "Crear") {
                 skip = "modificarZS";
-                url = "http://localhost/meraki-rent/ms-invent/php/handlerZS-cre.php";
+                url = "../php/handlerZS-cre.php";
             } else if (btn == "Modificar") {
                 skip = "crearZS";
-                url = "http://localhost/meraki-rent/ms-invent/php/handlerZS-mod.php";
+                url = "../php/handlerZS-mod.php";
             }
 
             var that = $(this),
@@ -1830,10 +1844,10 @@
 
             if (btn == "Crear") {
                 skip = "modificar-grupos";
-                url = "http://localhost/meraki-rent/ms-invent/php/handler-grupos-cre.php";
+                url = "../php/handler-grupos-cre.php";
             } else if (btn == "Modificar") {
                 skip = "crear-grupos";
-                url = "http://localhost/meraki-rent/ms-invent/php/handler-grupos-mod.php";
+                url = "../php/handler-grupos-mod.php";
             }
 
             var that = $(this),
@@ -1869,10 +1883,10 @@
 
             if (btn == "Crear") {
                 skip = "modificar-documentos";
-                url = "http://localhost/meraki-rent/ms-invent/php/handler-documentos-cre.php";
+                url = "../php/handler-documentos-cre.php";
             } else if (btn == "Modificar") {
                 skip = "crear-documentos";
-                url = "http://localhost/meraki-rent/ms-invent/php/handler-documentos-mod.php";
+                url = "../php/handler-documentos-mod.php";
             }
 
             var that = $(this),
@@ -1908,10 +1922,10 @@
 
             if (btn == "Crear") {
                 skip = "modificar-terceros";
-                url = "http://localhost/meraki-rent/ms-invent/php/handler-terceros-cre.php";
+                url = "../php/handler-terceros-cre.php";
             } else if (btn == "Modificar") {
                 skip = "crear-terceros";
-                url = "http://localhost/meraki-rent/ms-invent/php/handler-terceros-mod.php";
+                url = "../php/handler-terceros-mod.php";
             }
 
             var that = $(this),
@@ -1947,10 +1961,10 @@
 
             if (btn == "Crear") {
                 skip = "modificar-productos";
-                url = "http://localhost/meraki-rent/ms-invent/php/handler-productos-cre.php";
+                url = "../php/handler-productos-cre.php";
             } else if (btn == "Modificar") {
                 skip = "crear-productos";
-                url = "http://localhost/meraki-rent/ms-invent/php/handler-productos-mod.php";
+                url = "../php/handler-productos-mod.php";
             }
 
             var that = $(this),
