activeLink update - variable tablinks error

--- a/html/cardexZS.html
+++ b/html/cardexZS.html
@@ -1799,9 +1799,9 @@
         function activeLink(evt, name, c_name) {
           var i, links;
 
-          tablinks = document.getElementsByClassName(c_name);
+          links = document.getElementsByClassName(c_name);
           for (i = 0; i < x.length; i++) {
-              tablinks[i].className = tablinks[i].className.replace(" w3-dark-gray", "");
+              links[i].className = links[i].className.replace(" w3-dark-gray", "");
           }
 
           evt.currentTarget.className += " w3-dark-gray";
