login update - Kardex -> Cardex

--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Inventarios y Kardex</title>
+    <title>Inventarios y Cardex</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-ana.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -52,7 +52,7 @@
                 <img src="../images/meraki-logo1-alpha.png" alt="Meraki Logo" width="300px" class="w3-hide-small">
                 <p></p>
                 <div class="w3-container w3-border-top w3-border-bottom">
-                    <h3 class="w3-text-sand meraki-font-s2 w3-xlarge"><strong>Inventarios y Kardex</strong></h3>
+                    <h3 class="w3-text-sand meraki-font-s2 w3-xlarge"><strong>Inventarios y Cardex</strong></h3>
                 </div>
             </div>
 
